Fixed weird spacing, changed textarea to pre. Hype

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,15 +103,14 @@ div {
     margin: 10px 25%;
 }
 
-textarea {
-    min-width: 100%;
-    min-height: 600px;
+pre {
+    width: 100%;
     background-color: #081b29;
     color: #ededed;
     border: none;
     font-size: large;
     font-family: 'Poppins', sans-serif;
-    resize: none;
+    white-space: pre-wrap;
 }
 
 #copyright {
